Avoid running testpdfA twice. Introduce new list to validate pdfs type A.